--- a/index.html
+++ b/index.html
@@ -6,35 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
+</head>
+<style>
+
+</style>
+
+<body class="d-flex align-items-center justify-content-center">
+
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row ">
+                <div class="col-12 col-lg-6  px-0 px-sm-5 todo-parent mt-5 mt-lg-0">
+                    <div class="bg-white px-4 py-4 rounded-4 d-flex flex-column gap-4">
+                        <div
+                            class="task-element d-flex align-items-center justify-content-center px-4 py-2 rounded-pill">
+                            <input type="text" placeholder="Write your task"
+                                class="w-100 fw-semibold search-input border-0 bg-transparent">
+                            <button class=" search-btn border-0  py-2 rounded-pill text-light w-25">
+                                Add Task</button>
+                        </div>
+                        <div class=" rounded-4">
+                            <ul class="p-0 position-relative list-element d-flex flex-column gap-2">
+
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 heading  d-flex  justify-content-center flex-column text-start">
+                    <h1 class=>To Do list</h1>
+                    <h1>With javaScript</h1>
+                </div> 
+            </div>
+        </div>
+    </div>
+
+  
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-transparent border-0">
+                <div class="modal-body ">
+                    <div class="d-flex align-items-center justify-content-between   edit-parent">
+                        <input id="editInput" type="text" class="edit-input ps-3 py-2 bg-transparent border-0" placeholder="Edit Your Task Name">
+                        <button class="edit-btn border-0 px-4 py-2 rounded-pill transition" data-bs-dismiss="modal">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/0a7c965840.js" crossorigin="anonymous"></script>
-    <title>Tic Tac Toe</title>
-</head>
-<style>
-  
-</style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="index.js">
 
-<body>
 
-    <h1 class="text-white result">Winner is </h1>
 
-    <div class="game-div">
-        <button class="box border-0 rounded-top box1"></button>
-        <button class="box border-0 box2"></button>
-        <button class="box border-0 rounded-top box3"></button>
-        <button class="box border-0 box4"></button>
-        <button class="box border-0 box5"></button>
-        <button class="box border-0 box6"></button>
-        <button class="box border-0 rounded-bottom box7"></button>
-        <button class="box border-0 box8"></button>
-        <button class="box border-0 rounded-bottom box9"></button>
-    </div>
-
-    <button onclick="reset()" class="bg-white text-danger border-0 fw-bold px-5 py-2 rounded">Reset Game</button>
-
-    <script src="index.js"></script>
+    </script>
 </body>
-</html>
+
+</html>     
